upd footer translate

--- a/main/templates/calculator.html
+++ b/main/templates/calculator.html
@@ -82,7 +82,7 @@
   </script>
   
   <!-- Language Translator Script -->
-  <script src="{% static 'js/translator.js' %}"></script>
+  <script src="{% static 'js/translator.js' %}?v=20260131"></script>
   
   <style>
     @keyframes fadeInUp {
