--- a/main/templates/aboutus.html
+++ b/main/templates/aboutus.html
@@ -83,7 +83,7 @@
   </script>
   
   <!-- Language Translator Script -->
-  <script src="{% static 'js/translator.js' %}"></script>
+  <script src="{% static 'js/translator.js' %}?v=20260131"></script>
 
   <style>
     @keyframes fadeInUp {
