--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -95,7 +95,7 @@
   </script>
   
   <!-- Language Translator Script -->
-  <script src="{% static 'js/translator.js' %}"></script>
+  <script src="{% static 'js/translator.js' %}?v=20260131"></script>
 </head>
 
 <body>
