--- a/main/templates/portfolio.html
+++ b/main/templates/portfolio.html
@@ -84,7 +84,7 @@
   </script>
   
   <!-- Language Translator Script -->
-  <script src="{% static 'js/translator.js' %}"></script>
+  <script src="{% static 'js/translator.js' %}?v=20260131"></script>
 </head>
 
 <body>
