Upd price in calculator

--- a/main/templates/calculator.html
+++ b/main/templates/calculator.html
@@ -405,36 +405,36 @@
             <div class="form-group">
               <div class="radio-group" id="siteType">
                 <label class="radio-option">
-                  <input type="radio" name="siteType" value="9900" data-label="Лендинг" data-i18n-label="calc_type_landing" checked>
+                  <input type="radio" name="siteType" value="19000" data-label="Лендинг" data-i18n-label="calc_type_landing" checked>
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_type_landing">Лендинг (Landing Page)</div>
                     <div class="option-desc" data-i18n="calc_type_landing_desc">Одностраничный сайт для продукта или услуги</div>
                   </div>
-                <span class="option-price"><span data-i18n="calc_price_from">от</span> $99</span>
+                <span class="option-price"><span data-i18n="calc_price_from">от</span> $190</span>
                 </label>
                 <label class="radio-option">
-                  <input type="radio" name="siteType" value="24900" data-label="Корпоративный сайт" data-i18n-label="calc_type_corporate">
+                  <input type="radio" name="siteType" value="69000" data-label="Корпоративный сайт" data-i18n-label="calc_type_corporate">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_type_corporate">Корпоративный сайт</div>
                     <div class="option-desc" data-i18n="calc_type_corporate_desc">Многостраничный сайт компании с основными разделами</div>
                   </div>
-                <span class="option-price"><span data-i18n="calc_price_from">от</span> $249</span>
+                <span class="option-price"><span data-i18n="calc_price_from">от</span> $690</span>
                 </label>
                 <label class="radio-option">
-                  <input type="radio" name="siteType" value="49900" data-label="Интернет-магазин" data-i18n-label="calc_type_shop">
+                  <input type="radio" name="siteType" value="99000" data-label="Интернет-магазин" data-i18n-label="calc_type_shop">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_type_shop">Интернет-магазин</div>
                     <div class="option-desc" data-i18n="calc_type_shop_desc">Сайт с каталогом товаров и системой заказов</div>
                   </div>
-                <span class="option-price"><span data-i18n="calc_price_from">от</span> $499</span>
+                <span class="option-price"><span data-i18n="calc_price_from">от</span> $990</span>
                 </label>
                 <label class="radio-option">
-                  <input type="radio" name="siteType" value="89900" data-label="Веб-приложение" data-i18n-label="calc_type_app">
+                  <input type="radio" name="siteType" value="189000" data-label="Веб-приложение" data-i18n-label="calc_type_app">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_type_app">Веб-приложение</div>
                     <div class="option-desc" data-i18n="calc_type_app_desc">Сложное приложение с личным кабинетом и функционалом</div>
                   </div>
-                <span class="option-price"><span data-i18n="calc_price_from">от</span> $899</span>
+                <span class="option-price"><span data-i18n="calc_price_from">от</span> $1890</span>
                 </label>
               </div>
             </div>
@@ -467,20 +467,20 @@
                   <span class="option-price">$0</span>
                 </label>
                 <label class="radio-option">
-                  <input type="radio" name="designType" value="14900" data-label="Уникальный дизайн" data-i18n-label="calc_design_unique">
+                  <input type="radio" name="designType" value="24000" data-label="Уникальный дизайн" data-i18n-label="calc_design_unique">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_design_unique">Уникальный дизайн</div>
                     <div class="option-desc" data-i18n="calc_design_unique_desc">Разработка индивидуального дизайна с нуля</div>
                   </div>
-                  <span class="option-price">+$149</span>
+                  <span class="option-price">+$240</span>
                 </label>
                 <label class="radio-option">
-                  <input type="radio" name="designType" value="29900" data-label="Премиум дизайн" data-i18n-label="calc_design_premium">
+                  <input type="radio" name="designType" value="49000" data-label="Премиум дизайн" data-i18n-label="calc_design_premium">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_design_premium">Премиум дизайн</div>
                     <div class="option-desc" data-i18n="calc_design_premium_desc">Эксклюзивный дизайн с анимациями и UX-исследованием</div>
                   </div>
-                  <span class="option-price">+$299</span>
+                  <span class="option-price">+$490</span>
                 </label>
               </div>
             </div>
@@ -492,52 +492,52 @@
             <div class="form-group">
               <div class="checkbox-group" id="features">
                 <label class="checkbox-option">
-                  <input type="checkbox" value="2900" data-label="Контактные формы" data-i18n-label="calc_feature_forms">
+                  <input type="checkbox" value="4000" data-label="Контактные формы" data-i18n-label="calc_feature_forms">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_forms">Контактные формы</div>
                     <div class="option-desc" data-i18n="calc_feature_forms_desc">Формы обратной связи и заявок</div>
                   </div>
-                  <span class="option-price">+$29</span>
+                  <span class="option-price">+$40</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="9900" data-label="CMS система" data-i18n-label="calc_feature_cms">
+                  <input type="checkbox" value="19000" data-label="CMS система" data-i18n-label="calc_feature_cms">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_cms">CMS (Система управления)</div>
                     <div class="option-desc" data-i18n="calc_feature_cms_desc">Админ-панель для управления контентом</div>
                   </div>
-                  <span class="option-price">+$99</span>
+                  <span class="option-price">+$190</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="6900" data-label="Блог/Новости" data-i18n-label="calc_feature_blog">
+                  <input type="checkbox" value="9000" data-label="Блог/Новости" data-i18n-label="calc_feature_blog">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_blog">Блог / Новости</div>
                     <div class="option-desc" data-i18n="calc_feature_blog_desc">Раздел с публикациями и статьями</div>
                   </div>
-                  <span class="option-price">+$69</span>
+                  <span class="option-price">+$90</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="4900" data-label="Мультиязычность" data-i18n-label="calc_feature_multilang">
+                  <input type="checkbox" value="14000" data-label="Мультиязычность" data-i18n-label="calc_feature_multilang">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_multilang">Мультиязычность</div>
                     <div class="option-desc" data-i18n="calc_feature_multilang_desc">Поддержка нескольких языков</div>
                   </div>
-                  <span class="option-price">+$49</span>
+                  <span class="option-price">+$140</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="14900" data-label="Личный кабинет" data-i18n-label="calc_feature_account">
+                  <input type="checkbox" value="39000" data-label="Личный кабинет" data-i18n-label="calc_feature_account">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_account">Личный кабинет</div>
                     <div class="option-desc" data-i18n="calc_feature_account_desc">Регистрация и авторизация пользователей</div>
                   </div>
-                  <span class="option-price">+$149</span>
+                  <span class="option-price">+$390</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="7900" data-label="Поиск по сайту" data-i18n-label="calc_feature_search">
+                  <input type="checkbox" value="18000" data-label="Поиск по сайту" data-i18n-label="calc_feature_search">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_feature_search">Поиск по сайту</div>
                     <div class="option-desc" data-i18n="calc_feature_search_desc">Умный поиск с фильтрацией</div>
                   </div>
-                  <span class="option-price">+$79</span>
+                  <span class="option-price">+$180</span>
                 </label>
               </div>
             </div>
@@ -549,44 +549,44 @@
             <div class="form-group">
               <div class="checkbox-group" id="integrations">
                 <label class="checkbox-option">
-                  <input type="checkbox" value="9900" data-label="Платежные системы" data-i18n-label="calc_integration_payment">
+                  <input type="checkbox" value="19000" data-label="Платежные системы" data-i18n-label="calc_integration_payment">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_integration_payment">Платежные системы</div>
                     <div class="option-desc" data-i18n="calc_integration_payment_desc">Прием онлайн-платежей (Stripe, PayPal и др.)</div>
                   </div>
-                  <span class="option-price">+$99</span>
+                  <span class="option-price">+$190</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="6900" data-label="CRM интеграция" data-i18n-label="calc_integration_crm">
+                  <input type="checkbox" value="18000" data-label="CRM интеграция" data-i18n-label="calc_integration_crm">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_integration_crm">CRM интеграция</div>
                     <div class="option-desc" data-i18n="calc_integration_crm_desc">Подключение к вашей CRM системе</div>
                   </div>
-                  <span class="option-price">+$69</span>
+                  <span class="option-price">+$180</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="4900" data-label="Email-рассылки" data-i18n-label="calc_integration_email">
+                  <input type="checkbox" value="9000" data-label="Email-рассылки" data-i18n-label="calc_integration_email">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_integration_email">Email-рассылки</div>
                     <div class="option-desc" data-i18n="calc_integration_email_desc">MailChimp, SendGrid и др.</div>
                   </div>
-                  <span class="option-price">+$49</span>
+                  <span class="option-price">+$90</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="7900" data-label="Внешние API" data-i18n-label="calc_integration_api">
+                  <input type="checkbox" value="22000" data-label="Внешние API" data-i18n-label="calc_integration_api">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_integration_api">Внешние API</div>
                     <div class="option-desc" data-i18n="calc_integration_api_desc">Интеграция со сторонними сервисами</div>
                   </div>
-                  <span class="option-price">+$79</span>
+                  <span class="option-price">+$220</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="3900" data-label="Социальные сети" data-i18n-label="calc_integration_social">
+                  <input type="checkbox" value="8000" data-label="Социальные сети" data-i18n-label="calc_integration_social">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_integration_social">Социальные сети</div>
                     <div class="option-desc" data-i18n="calc_integration_social_desc">Интеграция с Facebook, Instagram, VK</div>
                   </div>
-                  <span class="option-price">+$39</span>
+                  <span class="option-price">+$80</span>
                 </label>
               </div>
             </div>
@@ -598,28 +598,28 @@
             <div class="form-group">
               <div class="checkbox-group" id="seo">
                 <label class="checkbox-option">
-                  <input type="checkbox" value="6900" data-label="Базовое SEO" data-i18n-label="calc_seo_basic" checked>
+                  <input type="checkbox" value="15000" data-label="Базовое SEO" data-i18n-label="calc_seo_basic">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_seo_basic">Базовое SEO</div>
                     <div class="option-desc" data-i18n="calc_seo_basic_desc">Настройка мета-тегов, sitemap, robots.txt</div>
                   </div>
-                  <span class="option-price">+$69</span>
+                  <span class="option-price">+$150</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="9900" data-label="Оптимизация скорости" data-i18n-label="calc_seo_speed">
+                  <input type="checkbox" value="19000" data-label="Оптимизация скорости" data-i18n-label="calc_seo_speed">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_seo_speed">Оптимизация скорости</div>
                     <div class="option-desc" data-i18n="calc_seo_speed_desc">Сжатие, кэширование, CDN</div>
                   </div>
-                  <span class="option-price">+$99</span>
+                  <span class="option-price">+$190</span>
                 </label>
                 <label class="checkbox-option">
-                  <input type="checkbox" value="4900" data-label="Google Analytics" data-i18n-label="calc_seo_analytics">
+                  <input type="checkbox" value="9000" data-label="Google Analytics" data-i18n-label="calc_seo_analytics">
                   <div class="option-content">
                     <div class="option-title" data-i18n="calc_seo_analytics">Аналитика</div>
                     <div class="option-desc" data-i18n="calc_seo_analytics_desc">Google Analytics, Яндекс.Метрика</div>
                   </div>
-                  <span class="option-price">+$49</span>
+                  <span class="option-price">+$90</span>
                 </label>
               </div>
             </div>
@@ -638,7 +638,7 @@
               </div>
               <div class="price-item">
                 <span class="price-item-label" data-i18n="calc_summary_pages">Количество страниц:</span>
-                <span class="price-item-value" id="pagesLabel">5 × $20</span>
+                <span class="price-item-value" id="pagesLabel">5 × $30</span>
               </div>
               <div class="price-item">
                 <span class="price-item-label" data-i18n="calc_summary_design">Дизайн:</span>
@@ -704,7 +704,7 @@
 
       // Количество страниц
       const pagesCount = parseInt(document.getElementById('pagesCount').value);
-      breakdown.pages = pagesCount * 2000; // $20 за страницу
+      breakdown.pages = pagesCount * 3000; // $30 за страницу
       total += breakdown.pages;
 
       // Дизайн
@@ -748,7 +748,7 @@
 
       // Обновление деталей
       document.getElementById('siteTypeLabel').textContent = breakdown.siteTypeLabel;
-      document.getElementById('pagesLabel').textContent = `${pagesCount} × $20`;
+      document.getElementById('pagesLabel').textContent = `${pagesCount} × $30`;
       document.getElementById('pagesValue').textContent = pagesCount;
       document.getElementById('designLabel').textContent = breakdown.designLabel;
 
